--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/minisat"]
-	path = lib/minisat
-	url = https://github.com/niklasso/minisat.git
+[submodule "c/minisat"]
+	path = c/minisat
+	url = https://github.com/niklasso/minisat
