--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ dyn-clone = "1.0.4"
 
 [build-dependencies]
 cc = "1.0"
-bindgen = "0.59.2"
 reqwest = { version = "0.11.9", features = ["blocking"] }
+# bindgen = "0.59.2"
