removed cur manysat

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,9 @@
 [submodule "c/minisat-c-bindings"]
 	path = c/minisat-c-bindings
 	url = https://github.com/niklasso/minisat-c-bindings.git
-[submodule "c/manysat"]
-	path = c/manysat
-	url = https://github.com/rohitjha/manysat.git
+# [submodule "c/manysat"]
+# 	path = c/manysat
+# 	url = https://github.com/rohitjha/manysat.git
 [submodule "c/glucose"]
 	path = c/glucose
 	url = https://github.com/QuentinJanuel/glucose.git
