--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "c/glucose"]
 	path = c/glucose
 	url = https://github.com/QuentinJanuel/glucose.git
+[submodule "c/manysat"]
+	path = c/manysat
+	url = https://github.com/QuentinJanuel/manysat
