--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 
 [build-dependencies]
 cc = "1.0"
-reqwest = { version = "0.11.9", features = ["blocking"] }
+# reqwest = { version = "0.11.9", features = ["blocking"] }
 # bindgen = "0.59.2"
